--- a/BookStoreFront/Views/Admin/Index.cshtml
+++ b/BookStoreFront/Views/Admin/Index.cshtml
@@ -27,6 +27,9 @@
     @foreach (var item in Model)
     {
         <tr>
+             <td>
+                @item.ID
+            </td>
             <td>
                 @item.Title
             </td>
@@ -40,8 +43,9 @@
                 @item.Price
             </td>
             <td>
-                <button class="btn btn-primary">Edit</button>
+                @*<button class="btn btn-primary">Edit</button>*@
                 @*<button class="btn btn-danger">Delete </button>*@
+                <a class="btn btn-primary" asp-action="UpdateBook" asp-route-id="@item.ID">Edit</a>
                 <a class="btn btn-danger" asp-action="DeleteBook">Delete</a>
             </td>
         </tr>
