--- a/BookStoreFront/Views/Admin/Index.cshtml
+++ b/BookStoreFront/Views/Admin/Index.cshtml
@@ -9,6 +9,9 @@
 <table class="table">
     <tr>
         <th>
+            ID            
+        </th>
+        <th>
             Title            
         </th>
         <th>
@@ -19,6 +22,12 @@
         </th>
         <th>
             Price
+        </th>
+        <th>
+            Pages
+        </th>
+        <th>
+            Year
         </th>
         <th>
             Actions
@@ -41,6 +50,12 @@
             </td>
             <td>
                 @item.Price
+            </td>
+            <td>
+                @item.PagesCount
+            </td>
+            <td>
+                @item.Year
             </td>
             <td>
                 @*<button class="btn btn-primary">Edit</button>*@
