--- a/BookStoreFront/Views/Admin/Index.cshtml
+++ b/BookStoreFront/Views/Admin/Index.cshtml
@@ -60,8 +60,13 @@
             <td>
                 @*<button class="btn btn-primary">Edit</button>*@
                 @*<button class="btn btn-danger">Delete </button>*@
-                <a class="btn btn-primary" asp-action="UpdateBook" asp-route-id="@item.ID">Edit</a>
-                <a class="btn btn-danger" asp-action="DeleteBook">Delete</a>
+                <div>
+                    <a class="btn btn-primary" asp-action="UpdateBook" asp-route-id="@item.ID">Edit</a>
+                   
+                </div>
+                <div>
+                     <a class="btn btn-danger" asp-action="DeleteBook">Delete</a>
+                </div>
             </td>
         </tr>
     }
